// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - FormInput FormInput without error renders correctly FormInput 1`] = `
.c0 {
  position: relative;
  display: block;
  padding-bottom: 1rem;
  font-size: 1.8rem;
}

.c1 {
  margin-top: 0.4rem;
}

<label
  className="c0"
>
  Dummy Label
  <Input
    className="c1"
    placeholder="Dummy placeHolder"
    type="text"
  />
</label>
`;

exports[`COMPONENT - FormInput Input with error renders correctly Input 1`] = `
.c0 {
  position: relative;
  display: block;
  padding-bottom: 1rem;
  font-size: 1.8rem;
}

.c2 {
  font-size: 1.4rem;
  color: #e0151d;
  padding-top: 0.2rem;
}

.c1 {
  margin-top: 0.4rem;
}

<label
  className="c0"
>
  Dummy Label
  <Input
    className="c1"
    error="dummyError"
    placeholder="Dummy placeHolder"
    type="text"
  />
  <div
    className="c2"
  >
    dummyError
  </div>
</label>
`;
